# omoide-tenji

./: .gitignore  Cargo.toml  README.md  upload_gallery.sh
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  index.css
src/: file_ops.rs  handler.rs  main.rs  route.rs  routes.rs  s3.rs
static/: index.html
static/assets/: index-BWcWPGav.js  index-Bjkx4NYV.js  index-CQuUV4W1.js  index-DUh32RMI.css  index-DcY0WL3P.css  index-Y-3HOHT0.js
