[package]
name = "image-process"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
base64 = "0.22.1"
