[package]
name = "album-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zip = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "fs"] }